hdparm-8.3
	- fixed -i display for udma6
	- try and exit with errno on fail paths, from Ladislav Michnovic
hdparm-8.2
	- clear feat register for safety with SET_MAX_ADDRESS command
	- add note to manpage regarding possible -N transient failures
	- IDE_TASKFILE bug fixes and cleanups: works with old IDE driver now
	- fix misreporting of dma modes on some SATA-ATAPI bridged drives
hdparm-8.1
	- fixed -U parameter bug
	- added ATA8 minor revision info to -I, courtesy of chrfranke
	- added WorldWideNumber to -I, courtesy of Raksac
hdparm-8.0
	- added --make-bad-sector to deliberately create a media error
	- added --write-sector (aka. --repair-sector) to repair a media error
	- added --read-sector to test for a media error
	- Makefile dependency tweaks
	- added -N (get/set max address/HPA) flag, courtesy of Jakub Bogusz
	- fixed LBAsects output from -i to use LBA48 values when available
	- fixed alternate opcode for SLEEPNOW
	- lots of changes/fixes to sgio.c to support more commands
	- add detection of buggy Sandisk 16MB CF card
	- fixed tf_to_lba() bug, courtesy of Jakub Bogusz
hdparm-7.7
	- fixed bug whereby old data was shown after settings changed (eg. with -W0)
	- removed old notes about a "correction factor" from man page -tT descriptions
	- retry open with O_RDONLY if O_RDWR fails with errno==EROFS
hdparm-7.6
	- added -F flag to flush on-drive write cache buffer
	- replaced use of shm* functions with of mmap()/mlock()
	- removed gcc -Wextra flag --> unsupported on Debian Sarge
	- re-allow use of --security-freeze in combination with other flags
hdparm-7.5
	- beef up warnings for -s1 flag, as people seem to be ignoring them
hdparm-7.4
	- ignore ENOTTY response from DRIVE_CMD(NULL)
	- decode CFA advanced timing information
hdparm-7.3
	- fixed spelling of --drq-hsm-error in -h output
	- fixed SG_IO CDB[2] bits for better SAT compliance
	- fixed version number (v7.2 has "7.1" as version, doh!)
	- added #ifdef around use of BLKGETSIZE64
	- manpage updated