@@ -1,3 +1,10 @@
+hdparm-8.6
+	- add partition safeguards to r/w sector and make_bad_sector
+hdparm-8.5
+	- fix u8->u16 bug in security commands for all of 8.x series, Christian Franke
+	- try and quiet errors from flush_buffer_cache()
+hdparm-8.4
+	- oops: v8.3 broke --write-sector.  Fix it again.
 hdparm-8.3
 	- fixed -i display for udma6
 	- try and exit with errno on fail paths, from Ladislav Michnovic
